--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -89,6 +89,13 @@
           <i class="fab fa-x-twitter"></i>
         </a>
         {% endif %}
+
+        {% if site.instagram %}
+        <a style="margin: 0 5px 0 0" href="{{ site.instagram }}">
+          <i class="fab fa-instagram"></i>
+        </a>
+        {% endif %}
+
         </div>
         <br>
 
